2006-03-22  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/dist.py (KiwiInstallLib._write_dictionary): Replace / with 
	os.sep on win32, fixes installation.

	* kiwi/ui/entry.py:
	* kiwi/ui/widgets/entry.py:
	* tests/test_Entry.py:
	Move stuff from ProxyEntry to KiwiEntry, use
	a kiwi entry in the ComboEntry.

2006-03-22  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/proxy.py: Rename from kiwi.proxies
	* kiwi/acccessor.py: Rename from accessors
	* kiwi/model.py: Rename from model

	* kiwi/proxies.py:
	Reorganize, Deprecate new_model, Rename model to _model and 
	add a property.

	* kiwi/interfaces.py:
	* kiwi/proxywidget.py:
	Document/reorganize signals

2006-03-21  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/proxywidget.py:
	* kiwi/ui/proxywidget.py:
	* kiwi/ui/widgets/checkbutton.py:
	* kiwi/ui/widgets/combo.py:
	* kiwi/ui/widgets/entry.py:
	* kiwi/ui/widgets/filechooser.py:
	* kiwi/ui/widgets/label.py:
	* kiwi/ui/widgets/proxy.py:
	* kiwi/ui/widgets/radiobutton.py:
	* kiwi/ui/widgets/spinbutton.py:
	* kiwi/ui/widgets/textview.py:
	Rename mixins and move out of kiwi/ui/widgets/

2006-03-21  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/interfaces.py:
	* kiwi/proxies.py:
	* kiwi/ui/views.py:
	* kiwi/ui/widgets/proxy.py:
	Rename interfaces and start to document

2006-03-21  Johan Dahlin  <jdahlin@async.com.br>

	* gazpacho-plugin/kiwiwidgets.xml: 
	* tools/glade_conversor.py (filters): 
	Update to reflect renames.

	* kiwi/ui/widgets/radiobutton.py (RadioButton.__init__): Rename
	RadioButton to ProxyRadioButton.
	Add gtk.RadioButton compatible arguments to ProxyRadioButton

	* kiwi/ui/widgets/entry.py: Rename Entry to ProxyEntry

	* kiwi/ui/gazpacholoader.py (GazpachoWidgetTree.__init__): 
	Print deprecation warnings inside a glade file nicely

	* kiwi/python.py (deprecationwarn, disabledeprecationcall): New
	functions, to manage deprecation warnings

2005-12-14  Ali Afshar <aafshar@gmail.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
